feat: Refactor authentication and user management, update entity relationships, and enhance comment functionality